--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "ko-KR"
 title                    : "H.E.R.A.C.L.E.S"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "heracles.jo"
+name                     : "heracles-jo"
 description              : "An amazing website."
 url                      : "https://heracles-jo.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
