--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "H.E.R.A.C.L.E.S"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "One who wants to wear the crown, should bear the crown"
 name                     : "heracles-jo"
 description              : "An amazing website."
 url                      : "https://heracles-jo.github.io"
